--- a/time1/app/src/main/res/layout/activity_leftmenu_new_main.xml
+++ b/time1/app/src/main/res/layout/activity_leftmenu_new_main.xml
@@ -9,6 +9,7 @@
     tools:openDrawer="start">
 
     <include
+        android:id="@+id/main_show"
         layout="@layout/app_bar_leftmenu_new_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
