--- a/time1/app/src/main/res/layout/activity_rili_main.xml
+++ b/time1/app/src/main/res/layout/activity_rili_main.xml
@@ -14,5 +14,11 @@
         android:firstDayOfWeek="3"
         android:shownWeekCount="4" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_qenren" />
+
 </RelativeLayout>
 
