--- a/Lifeprice3/LifePrice/app/src/main/res/layout/activity_life_price_main.xml
+++ b/Lifeprice3/LifePrice/app/src/main/res/layout/activity_life_price_main.xml
@@ -10,8 +10,12 @@
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="416dp"
+        android:layout_height="682dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/tablayout"
+        tools:layout_editor_absoluteX="-5dp" />
 </android.support.constraint.ConstraintLayout>
