--- a/time1/app/src/main/res/layout/activity_time_main.xml
+++ b/time1/app/src/main/res/layout/activity_time_main.xml
@@ -162,7 +162,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:text="@string/text_gettime"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/editText_beizhu" />
 
