--- a/time1/app/src/main/res/layout/list_view_item_time.xml
+++ b/time1/app/src/main/res/layout/list_view_item_time.xml
@@ -12,22 +12,36 @@
         android:scaleType="centerCrop"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <TextView
-        android:id="@+id/text_view_time_title"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:text="11"
-        tools:text="1111" />
+    <LinearLayout
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_view_time_shijian"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:text="11" />
+        <TextView
+            android:id="@+id/text_view_time_title"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_gravity="top"
+            android:layout_marginLeft="10dp"
+            android:text="11"
+            tools:text="1111" />
 
+        <TextView
+            android:id="@+id/text_view_time_shijian"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:text="11" />
+
+
+        <TextView
+            android:id="@+id/text_view_time_beizhu"
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="bottom"
+            android:text="@string/text_riqi" />
+    </LinearLayout>
 
 </LinearLayout>
